--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@neondatabase/serverless": "^0.9.4",
     "@t3-oss/env-core": "^0.11.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.14.3",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.1",
     "@typescript-eslint/parser": "^8.2.0",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^9.9.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-tailwindcss": "^3.17.4",
