setup clark auth  , project use cases , and data access layer

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
 
 # from Neon database: 
 # https://neon.tech/docs/introduction
-
 DRIZZLE_DATABASE_URL=""
+
+
+# From upload thing, docs: 
+# https://docs.uploadthing.com/
+UPLOADTHING_SECRET=''
+UPLOADTHING_APP_ID=''
+
+# clerk docs
+# https://clerk.com/docs/quickstarts/astro
+PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
