--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@clerk/astro": "^1.2.4",
     "@neondatabase/serverless": "^0.9.4",
     "@t3-oss/env-core": "^0.11.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@uploadthing/react": "^6.7.2",
     "astro": "^4.14.3",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
@@ -32,6 +34,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
