--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@uploadthing/react": "^6.7.2",
+    "@upstash/ratelimit": "^2.0.2",
+    "@upstash/redis": "^1.34.0",
     "astro": "^4.15.2",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "jose": "^5.8.0",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
