--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@upstash/redis": "^1.34.0",
     "astro": "^4.15.2",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "jose": "^5.8.0",
     "lucide-react": "^0.428.0",
+    "randombytes": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
@@ -42,6 +45,8 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.1",
+    "@types/crypto-js": "^4.2.2",
+    "@types/randombytes": "^2.0.3",
     "@typescript-eslint/parser": "^8.2.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^9.9.0",
