--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
-    "@astrojs/cloudflare": "^11.0.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.0",
     "@neondatabase/serverless": "^0.9.4",
     "@t3-oss/env-core": "^0.11.0",
     "@types/react": "^18.3.3",
