--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.0",
+    "@nanostores/react": "^0.7.3",
     "@neondatabase/serverless": "^0.9.4",
     "@t3-oss/env-core": "^0.11.0",
     "@types/react": "^18.3.3",
@@ -33,6 +34,7 @@
     "drizzle-zod": "^0.5.1",
     "jose": "^5.8.0",
     "lucide-react": "^0.428.0",
+    "nanostores": "^0.11.3",
     "randombytes": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
