--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.1",
+    "@eslint-react/eslint-plugin": "^1.14.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/crypto-js": "^4.2.2",
     "@typescript-eslint/parser": "^8.2.0",
